--- a/drawing-board-frontend/src/App.css
+++ b/drawing-board-frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  text-align: left;
+  height: 100%;
+  display: block;
 }
 
 .App-logo {
@@ -8,15 +10,39 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0.3125rem;
+  padding-left: 1.25rem;
+  color: #1ce39b;
+  margin-bottom: 1.25rem;
 }
 
-.App-link {
-  color: #09d3ac;
+.Form {
+  padding: 0.625rem;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+}
+
+.Form-drawingInput {
+  border: 1px solid #ccc;
+  border-right: none;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 1.25rem;
+}
+
+.Form-button {
+  font-size: 1.25rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.8125rem;
+  padding-bottom: 0.8125rem;
+  background-color: #282c34;
+  border: none;
+  color: #1ce39b;
+  cursor: pointer;
 }
