--- a/drawing-board-frontend/src/App.css
+++ b/drawing-board-frontend/src/App.css
@@ -16,6 +16,10 @@
   margin-bottom: 1.25rem;
 }
 
+.App-contents {
+  margin: 3.125rem;
+}
+
 .Form {
   padding: 0.625rem;
   padding-top: 2.5rem;
@@ -45,4 +49,33 @@
   border: none;
   color: #1ce39b;
   cursor: pointer;
+}
+
+.DrawingList {
+  background-color: #fff;
+  padding-left: 0px;
+}
+
+
+.DrawingList-item {
+  list-style: none;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  border-bottom: solid 1px #eee;
+  cursor: pointer;
+}
+
+.DrawingList-item:hover {
+  background-color: #eee;
+}
+
+.DrawingList-item:active {
+  background-color: #ddd;
+  box-shadow: inset 0 0 3px rgba(0,0,0, 0.6);
+}
+
+.DrawingList-item:last-child {
+  border-bottom: none;
 }
